# nanoindentation-consistency-checker

./: .gitignore  LICENSE.md  README.md  pyproject.toml
.github/workflows/: run_tests.yml
src/: README.md
src/anomaly_scripts/: displacement_offset_reverification_labels.py  force_offset_reverification_labels.py  tip_displacement_reverification_labels.py  too_deep_reverification_labels.py  unusual_loading_curvature_reverification_labels.py  unusual_unloading_curvature_reverification_labels.py
src/main/: config.py  image_regeneration.py  main.py  relabel_gui.py  reverification_labels.py
src/utils/: __init__.py  indent_manager.py  preprocess.py  setup_data.py
tests/integration/: test_indent_manager_examples.py  test_setup_data_examples.py
tests/integration/test_data/: all_samples_labelled.csv
tests/integration/test_data/Nanoindent_data/: indent_1_1.csv  indent_1_2.csv  indent_2_1.csv  indent_2_2.csv  indent_3_1.csv  indent_3_2.csv  indent_4_1.csv  indent_4_2.csv
tests/unit/: test_indent_manager.py  test_main.py  test_main_reverification_labels.py  test_preprocess.py  test_setup_data.py
