[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nanoindentation-consistency-checker"
version = "1.0.0"
dependencies = [
  "scikit-learn",
  "scikit-optimize",
  "numpy",
  "pandas",
  "matplotlib",
  "pytest",
  "rich",
]
requires-python = ">= 3.9"

[project.scripts]
nanoindent = "src.main.main:runner"

[tool.setuptools.packages.find]
include = ["src"]
